--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
       const name = document.getElementById('signatureInput').value.trim();
       if (name) {
         document.getElementById('modalContent').innerHTML =
-          `<h2>Thank you, ${name} 💖</h2><p>You just made someone very happy 😊</p>`;
+          `<h2>Thank you, ${name} 💖</h2><p>Submitted</p>`;
       } else {
         alert("Please enter your name to sign 💌");
       }
